# cmake-scripts

./: CMake-config.cmake  CMakeConfig.cmake  CMakeGraphVizOptions.cmake  CMakeLists.cmake  CMakeLists.txt  CMakeLists_.txt  CPack-config.cmake  CTest-config.cmake  CTest-script.cmake  CTestConfig.cmake  Config.cmake.in  Configure.cmake  NSIS.template.in  NSISCPackConfig.cmake  ProjectBuildType.cmake  README.md  README.org  ctest-script.cmake  functions.cmake
artifact-type/: binary.cmake  header.cmake  library.cmake
build-type/: Binary.cmake  Header.cmake  Library.cmake
ctest/: ParseAndAddTests.cmake  ctest-script.cmake
